# xmlwiz

./: README.md  main.py  pyproject.toml  xml_wiz.py
test/: test_convert_xml_to_json.py
test/data/: PurchaseOrder.xml  PurchaseOrder.xsd  company_complex.xml  company_complex.xsd  testing_example.xml  testing_example.xsd
xmlwiz/: convert_xml.py  mappings.py  pyarrow_converter.py  pyarrow_xsd_utils.py  xml_to_pyarrow.py  xsd_to_pyarrow.py
